[project]
name = "pygeom"
version = "0.0.14"
authors = [
  { name="Xero64", email="xero64@gmail.com" },
]
description = "Python Package for Geometry"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Xero64/pygeom"
Issues = "https://github.com/Xero64/pygeom/issues"
